Thay doi bai chuyen doi tien te

--- a/javascript/ungdungchuyendoitien/chuyendoitien.html
+++ b/javascript/ungdungchuyendoitien/chuyendoitien.html
@@ -25,10 +25,10 @@
             <option value="JPY">JPY</option>
             <option value="VND">VND</option>
         </select>
-        <input type="text" id="result" value="">
+        <input type="text" id="ketqua">
     </p>
     <p>
-    <input type="button" value="Convert" onclick="convert();">
+    <input type="button" value="Convert" onclick="changeValue();">
     <input type="reset" value="Reset">
     </p>
 </form>
