Bo sung bai tinh khoi luong co the

--- a/game/gameveu/gameveu.html
+++ b/game/gameveu/gameveu.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" onclick="jump()">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>game</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-$END$
+<div id="game">
+    <div id="character"></div>
+    <div id="block"></div>
+</div>
 </body>
+<script src="js.js"></script>
 </html>
