--- a/javascript/su kien chuot/sukienchuot.html
+++ b/javascript/su kien chuot/sukienchuot.html
@@ -19,17 +19,17 @@
     function init() {
         imgObj = document.getElementById("myimage");
         imgObj.style.position = 'relative';
-        imgObj.style.left = '500px';
-        imgObj.style.top = '100px';
+        imgObj.style.left = '0px';
+        imgObj.style.top = '0px';
     }
     function moveRight() {
         imgObj.style.left = parseInt(imgObj.style.left) + 20 + 'px';
     }
     function moveLeft(){
-        imgObj.style.left = parseInt(imgObj.style.left) + -20 + 'px';
+        imgObj.style.left = parseInt(imgObj.style.left) - 20 + 'px';
     }
     function moveUp(){
-        imgObj.style.top = parseInt(imgObj.style.top) + -20 + 'px';
+        imgObj.style.top = parseInt(imgObj.style.top) - 20 + 'px';
     }
     function moveDown(){
         imgObj.style.top = parseInt(imgObj.style.top) + 20 + 'px';
