--- a/javascript/Array/Thực hành/TH5/carosimple.html
+++ b/javascript/Array/Thực hành/TH5/carosimple.html
@@ -17,6 +17,7 @@
     for (let i = 0; i < 5 ; i++) {
         board[i] = Array(0,0,0,0,0);
     }
+
     for (let i = 0; i < 5; i++){
         data += "<br>";
         for (let j = 0; j < 5 ; j++){
@@ -33,7 +34,7 @@
         for (let i = 0; i < 5; i++){
             data += "<br>";
             for (let j = 0 ; j < 5 ; j ++){
-            data += board[i][j] + "&nbsp;&nbsp;&nbsp;&nbsp;";
+            data += board[i][j] + "&nbsp;&nbsp;";
             }
         }
         b.innerHTML = data;
