Hoan thanh bai luyen tap ham 2

--- a/javascript/Function/Bài tập/Luyện tập tạo và sử dụng hàm 1/Find A Star/Find-a-Star.html
+++ b/javascript/Function/Bài tập/Luyện tập tạo và sử dụng hàm 1/Find A Star/Find-a-Star.html
@@ -20,11 +20,11 @@
                 alert("Ngôi sao bạn nhập thuộc chòm sao: " + input);
                 return input;
             }
-
-            else if (i === Star.length - 1){
+            if (i === Star.length - 1){
                 alert("Ko tìm thấy ngôi sao nào");
             }
         }
+
 
     }
 
