hoan thanh bai tao app quan ly

--- a/javascript/Function/Bài tập/Manage App/Manage-App.html
+++ b/javascript/Function/Bài tập/Manage App/Manage-App.html
@@ -15,8 +15,9 @@
     </div>
     <div class="Display_field">
         <h2>Display All Product</h2>
+        <label for="ProductTotal" style="margin-left: 15px; color: darkred ; font-weight: bold">Total</label>
+        <input type="text" id="ProductTotal">
         <h3>Product name</h3>
-        <input type="text" id="ProductTotal"><br>
         <div id="DisplayTable" onload="DisplayProduct()"></div>
     </div>
 </div>
